# Crewai-Dast

./: .env  changelog.md  pyproject.toml
Escrap/: pyvenv.cfg
Escrap/Scripts/: activate  activate.bat  activate.fish  dumppdf.py  jp.py  pdf2txt.py
enscrap/: .env  .pre-commit-config.yaml  README.md  changelog.md  pyproject.toml  pyvenv.cfg  requirements.txt  setup.py
enscrap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
enscrap/Scripts/: activate  activate.bat  activate.fish
enscrap/src/enscrap/: crew.py  main.py
enscrap/src/enscrap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
enscrap/src/enscrap/config/: agents.yaml  tasks.yaml
enscrap/src/enscrap/tools/: supabase_tool.py  web_scraping_tool.py
enscrap/tests/: test_supabase_tool.py
